added one more function

--- a/new_fiel.ipynb
+++ b/new_fiel.ipynb
@@ -32,6 +32,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def func2(a,b): \n",
+    "    return a*b \n",
+    "\n",
+    "\n",
+    "func2(3,3) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
